tests/ui/lang/consts/shallow-ref.stderr
error[E0432]: unresolved import `glam::const_mat2`
 --> $DIR/shallow-ref.rs:8:12
  |
8 | use glam::{const_mat2, Mat2, Vec2};
  |            ^^^^^^^^^^ no `const_mat2` in the root

error: cannot determine resolution for the macro `const_mat2`
  --> $DIR/shallow-ref.rs:15:21
   |
15 | const ROT90: Mat2 = const_mat2![[0.0, 1.0], [-1.0, 0.0]];
   |                     ^^^^^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
